--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-icons": "^4.11.0",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "sass": "^1.68.0"
   },
